--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 80px 50px 20px 50px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+}
+
+nav {
+  height: 20px;
+  width: 100%;
+  text-align: center;
   color: white;
+  vertical-align: center;
+  padding: 20px;
+  background-color: black;
+  position: fixed;
+  top: 0;
+}
+i {
+  cursor: pointer;
+}
+.card {
+  width: 200px;
+  margin: 10px 0;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: rgb(193, 232, 255);
+  box-shadow: 0 1px 3px #0000001f, 0 1px 2px #0000003d !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  color: rgb(255, 255, 255);
+  background-color: rgb(103, 0, 147);
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:disabled {
+  background-color: rgb(141, 141, 141);
+  cursor: default;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th,
+td {
+  padding: 5px;
+  text-align: left;
+}
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus {
+  border: 3px solid #555;
 }
